--- a/src/shared/i18n/messages/ko/grunfeld.json
+++ b/src/shared/i18n/messages/ko/grunfeld.json
@@ -4,6 +4,261 @@
     "description": "Grunfeld는 React 애플리케이션에서 대화상자(모달, 알림, 확인 등)를 쉽고 일관되게 관리할 수 있게 해 주는 경량 라이브러리입니다. 번거로운 상태 관리나 복잡한 제어 흐름 없이, 몇 줄의 선언적 코드로 사용자 인터랙션을 위한 대화상자를 띄우고 결과를 받아 처리할 수 있도록 설계되었습니다.<br></br><br></br>핵심 목표는 단순성, 접근성, 그리고 확장성입니다. 포커스 트래핑, 키보드 닫기, ARIA 속성 등 접근성 고려 사항을 기본으로 지원하며, 여러 개의 모달 스택 처리, 애니메이션 훅 연동, 그리고 커스텀 컴포넌트로 외형과 동작을 쉽게 바꿀 수 있습니다. Promise 기반 API를 제공해 비동기 흐름(예: 확인 대화상자에서 사용자의 결정을 기다림)을 자연스럽게 처리할 수 있습니다.<br></br><br></br>또한 TypeScript 친화적인 타입 정의를 제공하여 컴파일 타임에 안전하게 사용하도록 돕고, Context/Provider 패턴을 통해 애플리케이션 전역에서 일관된 대화상자 동작을 유지할 수 있습니다. 서버사이드 렌더링(SSR) 환경에서는 안전하게 폴백 UI를 렌더링하도록 설계되어 클라이언트 전용 로직과 잘 구분됩니다. 짧은 코드로 복잡한 대화상자 시나리오를 구현하면서도 접근성과 유지보수성을 놓치지 않으려는 팀에 적합합니다.",
     "installation": "설치 방법",
     "installationBody": "grunfeld는 아래의 다양한 방법으로 설치할 수 있습니다.",
-    "quickStart": "빠른 시작"
+    "quickStart": "빠른 시작",
+    "quickStartBody": "앱의 최상위에 <cd>GrunfeldProvider</cd>를 추가하세요:",
+    "subtitle1": "기본 사용법",
+    "0": "간단한 확인 대화상자를 생성하고 사용자의 응답을 받을 수 있습니다. <cd>grunfeld.add()</cd> 메서드는 Promise를 반환하므로 <cd>async/await</cd>를 사용하여 사용자의 선택을 기다릴 수 있습니다."
+  },
+  "guides": {
+    "basic-usage": {
+      "title": "기본 사용법",
+      "0": "Grunfeld는 두 가지 주요 사용 패턴을 제공합니다: 간단한 알림과 사용자 응답을 받는 대화상자입니다. 각 패턴은 서로 다른 오버로드를 사용하여 구현됩니다.",
+      "subtitle1": "알림 대화상자",
+      "1": "매개변수 없는 팩토리 함수를 사용하면 간단한 알림으로 동작합니다. 이 방식은 <cd>void</cd>를 반환하며 동기적으로 실행됩니다.",
+      "subtitle2": "확인 대화상자",
+      "2": "사용자의 선택을 기다리는 확인 대화상자는 <cd>removeWith</cd> 함수를 매개변수로 받습니다. 이 함수를 호출하여 대화상자를 닫고 결과값을 반환합니다.",
+      "subtitle3": "입력 대화상자",
+      "3": "사용자로부터 데이터를 입력받는 대화상자도 동일한 패턴을 따릅니다. 입력 컴포넌트를 만들고 <cd>removeWith</cd>를 통해 값을 전달합니다."
+    },
+    "provider-setup": {
+      "title": "Provider 설정",
+      "0": "Grunfeld를 사용하기 위해서는 먼저 애플리케이션의 최상위에 <cd>GrunfeldProvider</cd>를 설정해야 합니다. 이 Provider는 대화상자의 렌더링과 상태 관리를 담당합니다.",
+      "subtitle1": "Next.js App Router",
+      "1": "Next.js App Router를 사용하는 경우, 레이아웃 파일에 Provider를 추가합니다:",
+      "subtitle2": "Next.js Pages Router",
+      "2": "Pages Router를 사용하는 경우, <cd>_app.tsx</cd> 파일에 Provider를 추가합니다:",
+      "subtitle3": "React (Vite, CRA)",
+      "3": "일반 React 애플리케이션에서는 앱의 루트 컴포넌트에 Provider를 추가합니다:"
+    },
+    "dialog-patterns": {
+      "title": "대화상자 패턴",
+      "0": "Grunfeld는 다양한 대화상자 패턴을 지원합니다. 각 패턴은 특정 사용 사례에 최적화되어 있습니다.",
+      "subtitle1": "알림 (Alert)",
+      "1": "사용자에게 정보를 전달하는 간단한 알림입니다. 반환값이 없으며 확인 버튼만 제공합니다.",
+      "subtitle2": "확인 (Confirm)",
+      "2": "사용자의 결정이 필요한 경우 사용합니다. 일반적으로 boolean 값을 반환합니다.",
+      "subtitle3": "프롬프트 (Prompt)",
+      "3": "사용자로부터 텍스트 입력을 받습니다. 입력된 문자열을 반환합니다.",
+      "subtitle4": "커스텀 대화상자",
+      "4": "복잡한 UI나 여러 단계의 상호작용이 필요한 경우 커스텀 컴포넌트를 사용합니다."
+    },
+    "async-handling": {
+      "title": "비동기 처리",
+      "0": "Grunfeld의 강력한 기능 중 하나는 비동기 작업을 자연스럽게 처리할 수 있다는 점입니다. 대화상자 생성 시 비동기 작업을 수행하거나, 여러 대화상자를 순차적으로 표시할 수 있습니다.",
+      "subtitle1": "로딩 대화상자",
+      "1": "비동기 작업 중 로딩 상태를 표시하는 대화상자를 만들 수 있습니다:",
+      "subtitle2": "순차적 대화상자",
+      "2": "여러 대화상자를 순차적으로 표시하여 복잡한 워크플로우를 구현할 수 있습니다:",
+      "subtitle3": "타임아웃 처리",
+      "3": "일정 시간 후 자동으로 대화상자를 닫고 Promise를 처리할 수 있습니다:"
+    }
+  },
+  "api": {
+    "add-method": {
+      "title": "grunfeld.add()",
+      "0": "<cd>grunfeld.add()</cd> 메서드는 새로운 대화상자를 생성하는 핵심 API입니다. 두 가지 오버로드를 제공하여 다양한 사용 사례를 지원합니다.",
+      "subtitle1": "알림 오버로드",
+      "1": "매개변수 없는 팩토리 함수를 사용하면 간단한 알림을 생성합니다:",
+      "2": "이 오버로드는 <cd>void</cd>를 반환하며, 즉시 실행됩니다. React 요소를 직접 반환하거나 <cd>GrunfeldProps</cd> 객체를 반환할 수 있습니다.",
+      "subtitle2": "응답 오버로드",
+      "3": "<cd>removeWith</cd> 매개변수를 받는 팩토리 함수를 사용하면 사용자 응답을 받을 수 있습니다:",
+      "4": "이 오버로드는 <cd>Promise'<'T | undefined'>'</cd>를 반환합니다. 사용자가 <cd>removeWith(value)</cd>를 호출하면 Promise가 해당 값으로 resolve됩니다.",
+      "subtitle3": "GrunfeldProps",
+      "5": "대화상자의 옵션을 지정하는 객체입니다:",
+      "list": {
+        "0": "<cd>element</cd>: 대화상자에 표시할 React 요소",
+        "1": "<cd>position</cd>: 대화상자의 위치 (기본값: 'center')",
+        "2": "<cd>lightDismiss</cd>: 배경 클릭으로 닫을지 여부 (기본값: true)",
+        "3": "<cd>renderMode</cd>: 렌더링 모드 ('inline' | 'top-layer', 기본값: 'inline')",
+        "4": "<cd>backdropStyle</cd>: 백드롭의 CSS 스타일",
+        "5": "<cd>dismissCallback</cd>: 대화상자가 닫힐 때 실행되는 콜백"
+      },
+      "subtitle4": "Promise 중단",
+      "6": "<cd>grunfeld.remove()</cd> 또는 <cd>grunfeld.clear()</cd>로 대화상자가 강제로 닫히면 Promise는 <cd>undefined</cd>로 resolve됩니다:",
+      "7": "이를 활용하여 타임아웃이나 외부 이벤트로 인한 중단을 처리할 수 있습니다."
+    },
+    "remove-clear": {
+      "title": "remove & clear",
+      "0": "Grunfeld는 대화상자를 제거하는 두 가지 메서드를 제공합니다.",
+      "subtitle1": "grunfeld.remove()",
+      "1": "가장 최근에 추가된 대화상자를 제거합니다. 대화상자는 LIFO (Last In First Out) 순서로 제거됩니다:",
+      "2": "이 메서드는 대화상자의 Promise를 <cd>undefined</cd>로 resolve합니다. 여러 대화상자가 스택되어 있는 경우, 가장 위의 대화상자만 제거됩니다.",
+      "subtitle2": "grunfeld.clear()",
+      "3": "모든 대화상자를 한 번에 제거합니다:",
+      "4": "이 메서드는 모든 대화상자의 Promise를 <cd>undefined</cd>로 resolve합니다. 긴급 상황이나 라우트 변경 시 유용합니다.",
+      "subtitle3": "ESC 키와 Light Dismiss",
+      "5": "사용자는 다음 방법으로도 대화상자를 닫을 수 있습니다:",
+      "list": {
+        "0": "<b>ESC 키</b>: 가장 최근 대화상자를 닫습니다 (grunfeld.remove()와 동일)",
+        "1": "<b>배경 클릭</b>: <cd>lightDismiss: true</cd>인 경우 해당 대화상자를 닫습니다"
+      },
+      "6": "이러한 사용자 액션도 Promise를 <cd>undefined</cd>로 resolve합니다."
+    },
+    "types": {
+      "title": "TypeScript 타입",
+      "0": "Grunfeld는 완전한 TypeScript 지원을 제공합니다. 모든 타입은 패키지에서 import할 수 있습니다.",
+      "subtitle1": "핵심 타입",
+      "1": "주요 타입 정의:",
+      "subtitle2": "Position 타입",
+      "2": "대화상자의 위치를 지정하는 타입입니다. 화면을 9분할하여 정확한 위치를 지정할 수 있습니다:",
+      "subtitle3": "제네릭 타입 매개변수",
+      "3": "<cd>grunfeld.add'<'T'>'()</cd>의 제네릭 매개변수는 <cd>removeWith</cd> 함수의 인자 타입과 반환되는 Promise의 타입을 결정합니다:",
+      "4": "타입 안정성을 위해 항상 명시적으로 제네릭 타입을 지정하는 것을 권장합니다."
+    }
+  },
+  "config": {
+    "provider-options": {
+      "title": "Provider 옵션",
+      "0": "<cd>GrunfeldProvider</cd>는 전역 기본값을 설정할 수 있는 <cd>options</cd> prop을 받습니다. 개별 대화상자에서 이 값들을 오버라이드할 수 있습니다.",
+      "subtitle1": "사용 가능한 옵션",
+      "1": "Provider에서 설정할 수 있는 모든 옵션:",
+      "list": {
+        "0": "<cd>defaultPosition</cd>: 모든 대화상자의 기본 위치 (기본값: 'center')",
+        "1": "<cd>defaultLightDismiss</cd>: 배경 클릭으로 닫기 기능의 기본값 (기본값: true)",
+        "2": "<cd>defaultRenderMode</cd>: 렌더링 모드의 기본값 (기본값: 'inline')",
+        "3": "<cd>defaultBackdropStyle</cd>: 백드롭의 기본 스타일"
+      },
+      "subtitle2": "사용 예제",
+      "2": "프로젝트 전반에 걸쳐 일관된 스타일을 적용하는 예제:",
+      "subtitle3": "개별 오버라이드",
+      "3": "개별 대화상자에서 Provider의 기본값을 오버라이드할 수 있습니다:",
+      "4": "이 대화상자는 Provider의 기본 설정을 무시하고 우상단에 표시되며, 배경 클릭으로 닫을 수 없습니다."
+    },
+    "dialog-options": {
+      "title": "대화상자 옵션",
+      "0": "개별 대화상자는 다양한 옵션을 통해 동작과 외형을 커스터마이징할 수 있습니다. 모든 옵션은 선택사항이며, 지정하지 않으면 Provider의 기본값을 사용합니다.",
+      "subtitle1": "position",
+      "1": "대화상자가 표시될 화면상의 위치를 지정합니다. 9분할 그리드 시스템을 사용합니다:",
+      "2": "각 위치는 CSS flexbox를 사용하여 정확하게 배치됩니다.",
+      "subtitle2": "lightDismiss",
+      "3": "백드롭(배경)을 클릭했을 때 대화상자를 닫을지 여부를 결정합니다:",
+      "4": "<cd>false</cd>로 설정하면 사용자는 명시적으로 버튼을 클릭하거나 ESC 키를 눌러야 대화상자를 닫을 수 있습니다.",
+      "subtitle3": "renderMode",
+      "5": "대화상자를 렌더링하는 방식을 결정합니다:",
+      "list": {
+        "0": "<cd>inline</cd>: z-index 기반 렌더링 (기본값, 모든 브라우저 지원)",
+        "1": "<cd>top-layer</cd>: HTML <cd>'<'dialog'>'</cd> 요소 사용 (최신 브라우저만 지원)"
+      },
+      "6": "top-layer 모드는 z-index 충돌 문제가 없고 브라우저 네이티브 기능을 활용하지만, 브라우저 지원 범위가 제한적입니다.",
+      "subtitle4": "backdropStyle",
+      "7": "백드롭의 CSS 스타일을 커스터마이징합니다:",
+      "8": "모든 유효한 React CSS 속성을 사용할 수 있습니다.",
+      "subtitle5": "dismissCallback",
+      "9": "대화상자가 닫힐 때 실행되는 콜백 함수입니다:",
+      "10": "⚠️ <b>주의</b>: 이 콜백 내에서 <cd>grunfeld.remove()</cd>나 <cd>grunfeld.clear()</cd>를 호출하면 안 됩니다. 대화상자가 이미 제거되는 중이기 때문에 무한 루프나 예기치 않은 동작이 발생할 수 있습니다."
+    },
+    "position-system": {
+      "title": "위치 시스템",
+      "0": "Grunfeld는 화면을 9분할하는 직관적인 위치 시스템을 제공합니다. 이를 통해 대화상자를 정확한 위치에 배치할 수 있습니다.",
+      "subtitle1": "그리드 레이아웃",
+      "1": "화면은 다음과 같이 9개 영역으로 나뉩니다:",
+      "subtitle2": "위치 사용 예제",
+      "2": "각 위치별 사용 사례:",
+      "list": {
+        "0": "<cd>center</cd> 또는 <cd>center-center</cd>: 중요한 확인 대화상자, 모달",
+        "1": "<cd>top-right</cd>: 알림, 토스트 메시지",
+        "2": "<cd>bottom-center</cd>: 액션 시트, 쿠키 동의",
+        "3": "<cd>top-center</cd>: 배너, 공지사항",
+        "4": "<cd>bottom-right</cd>: 채팅 위젯"
+      },
+      "subtitle3": "여러 대화상자",
+      "3": "여러 대화상자를 동시에 표시할 때, 같은 위치에 있는 대화상자들은 z-index에 따라 쌓입니다:",
+      "4": "각 대화상자는 독립적으로 위치가 지정되므로, 서로 다른 영역에 여러 대화상자를 동시에 표시할 수 있습니다."
+    },
+    "render-modes": {
+      "title": "렌더링 모드",
+      "0": "Grunfeld는 두 가지 렌더링 모드를 지원합니다: <cd>inline</cd>과 <cd>top-layer</cd>. 각 모드는 서로 다른 장단점을 가지고 있습니다.",
+      "subtitle1": "Inline 모드 (기본값)",
+      "1": "z-index 기반의 전통적인 렌더링 방식입니다:",
+      "list0": {
+        "0": "모든 모던 브라우저 지원 (IE11+)",
+        "1": "완전한 스타일 커스터마이징",
+        "2": "예측 가능한 동작",
+        "3": "JavaScript 기반 ESC 키 처리"
+      },
+      "2": "이 모드는 가장 안정적이며 넓은 브라우저 지원을 제공합니다. 대부분의 경우 이 모드를 사용하는 것을 권장합니다.",
+      "subtitle2": "Top-layer 모드",
+      "3": "HTML5 <cd>'<'dialog'>'</cd> 요소를 사용하는 네이티브 방식입니다:",
+      "list1": {
+        "0": "z-index 충돌 없음",
+        "1": "브라우저 네이티브 ESC 키 처리",
+        "2": "더 나은 접근성",
+        "3": "최신 브라우저만 지원 (Chrome 37+, Firefox 98+, Safari 15.4+)"
+      },
+      "4": "<cd>'<'dialog'>'</cd> 요소는 자동으로 최상위 레이어에 렌더링되므로, 다른 요소의 z-index에 영향받지 않습니다.",
+      "subtitle3": "브라우저 호환성",
+      "5": "각 모드의 브라우저 지원:",
+      "6": "프로젝트의 타겟 브라우저에 따라 적절한 모드를 선택하세요.",
+      "subtitle4": "모드 전환",
+      "7": "개별 대화상자마다 다른 렌더링 모드를 사용할 수 있습니다:",
+      "8": "일반적으로 프로젝트 전체에 걸쳐 하나의 모드를 일관되게 사용하는 것을 권장합니다."
+    }
+  },
+  "examples": {
+    "alert-dialog": {
+      "title": "알림 대화상자",
+      "0": "알림 대화상자는 사용자에게 정보를 전달하는 가장 간단한 형태의 대화상자입니다. 확인 버튼만 제공하며, 반환값이 없습니다.",
+      "subtitle1": "기본 알림",
+      "1": "가장 간단한 형태의 알림:",
+      "subtitle2": "성공 알림",
+      "2": "작업 완료를 알리는 알림:",
+      "subtitle3": "오류 알림",
+      "3": "오류 메시지를 표시하는 알림:",
+      "subtitle4": "자동으로 닫히는 알림",
+      "4": "일정 시간 후 자동으로 닫히는 알림:",
+      "5": "이 패턴은 토스트 알림이나 일시적인 메시지에 유용합니다."
+    },
+    "confirm-dialog": {
+      "title": "확인 대화상자",
+      "0": "확인 대화상자는 사용자의 결정이 필요한 경우 사용합니다. 일반적으로 boolean 값을 반환하며, 위험한 작업을 수행하기 전에 사용자의 동의를 구합니다.",
+      "subtitle1": "기본 확인",
+      "1": "삭제와 같은 중요한 작업 전에 확인을 받습니다:",
+      "subtitle2": "비구조화 확인",
+      "2": "중요한 작업의 경우, 사용자에게 작업을 확인하도록 할 수 있습니다:",
+      "subtitle3": "조건부 동작",
+      "3": "확인 결과에 따라 다른 동작을 수행합니다:",
+      "subtitle4": "타임아웃이 있는 확인",
+      "4": "일정 시간 내에 응답하지 않으면 자동으로 취소됩니다:"
+    },
+    "input-dialog": {
+      "title": "입력 대화상자",
+      "0": "입력 대화상자는 사용자로부터 데이터를 입력받습니다. 텍스트, 숫자, 선택 등 다양한 형태의 입력을 받을 수 있습니다.",
+      "subtitle1": "텍스트 입력",
+      "1": "사용자로부터 텍스트를 입력받습니다:",
+      "subtitle2": "검증이 있는 입력",
+      "2": "입력값을 검증하고 오류 메시지를 표시합니다:",
+      "subtitle3": "다중 필드 폼",
+      "3": "여러 입력 필드를 포함하는 복잡한 폼:",
+      "subtitle4": "선택 대화상자",
+      "4": "사용자에게 여러 옵션 중 하나를 선택하도록 합니다:"
+    },
+    "custom-styling": {
+      "title": "커스텀 스타일링",
+      "0": "Grunfeld는 완전한 스타일 커스터마이징을 지원합니다. CSS, Tailwind, CSS-in-JS 등 어떤 스타일링 방법도 사용할 수 있습니다.",
+      "subtitle1": "Tailwind CSS",
+      "1": "Tailwind 클래스를 사용한 스타일링:",
+      "subtitle2": "CSS 모듈",
+      "2": "CSS 모듈을 사용한 스타일링:",
+      "subtitle3": "인라인 스타일",
+      "3": "동적 스타일링이 필요한 경우 인라인 스타일을 사용합니다:",
+      "subtitle4": "백드롭 커스터마이징",
+      "4": "백드롭의 스타일을 변경하여 다양한 효과를 만들 수 있습니다:",
+      "subtitle5": "애니메이션",
+      "5": "CSS 애니메이션을 사용하여 대화상자에 생동감을 더합니다:"
+    },
+    "promise-handling": {
+      "title": "Promise 처리",
+      "0": "Grunfeld의 Promise 기반 API를 활용하면 복잡한 비동기 워크플로우를 깔끔하게 구현할 수 있습니다.",
+      "subtitle1": "순차적 대화상자",
+      "1": "여러 대화상자를 순차적으로 표시합니다:",
+      "subtitle2": "조건부 흐름",
+      "2": "이전 대화상자의 결과에 따라 다음 대화상자를 결정합니다:",
+      "subtitle3": "Promise.race",
+      "3": "타임아웃과 사용자 입력 중 먼저 발생하는 것을 처리합니다:",
+      "subtitle4": "에러 처리",
+      "4": "비동기 작업 중 발생하는 에러를 대화상자로 처리합니다:",
+      "subtitle5": "중단 처리",
+      "5": "<cd>grunfeld.remove()</cd>나 <cd>grunfeld.clear()</cd>로 인한 중단을 감지합니다:"
+    }
   }
 }
