--- a/src/shared/i18n/messages/ko/grunfeld.json
+++ b/src/shared/i18n/messages/ko/grunfeld.json
@@ -51,6 +51,38 @@
       "2": "여러 대화상자를 순차적으로 표시하여 복잡한 워크플로우를 구현할 수 있습니다:",
       "subtitle3": "타임아웃 처리",
       "3": "일정 시간 후 자동으로 대화상자를 닫고 Promise를 처리할 수 있습니다:"
+    },
+    "scenario": {
+      "title": "시나리오 (Scenario)",
+      "0": "시나리오 기능은 복잡한 대화상자 흐름을 체계적으로 관리하고 재사용할 수 있게 해줍니다. 여러 단계의 대화상자나 조건부 흐름을 하나의 논리적 단위로 묶어 관리할 수 있습니다.",
+      "subtitle1": "기본 객체 방식",
+      "1": "가장 간단하고 직관적인 방식으로, 객체 형태로 시나리오를 정의합니다:",
+      "2": "각 단계는 메서드로 호출할 수 있으며, Promise를 반환하므로 <cd>await</cd>를 사용하여 순차적으로 실행할 수 있습니다.",
+      "subtitle2": "분리된 방식 (고급)",
+      "3": "제어 로직과 구현을 분리하여 더 복잡한 시나리오를 구성할 수 있습니다:",
+      "4": "이 방식은 비즈니스 로직과 UI 구현을 분리하여 유지보수성을 높여줍니다.",
+      "subtitle3": "매개변수 전달",
+      "5": "시나리오 단계에 매개변수를 전달하여 동적인 동작을 구현할 수 있습니다:",
+      "subtitle4": "사용자 입력 처리",
+      "6": "사용자 입력을 받아 다음 단계로 전달하거나 처리할 수 있습니다:",
+      "subtitle5": "시나리오 옵션",
+      "7": "시나리오 실행 옵션을 설정하여 동작을 제어할 수 있습니다:",
+      "list": {
+        "0": "<cd>stopOnError</cd>: 오류 발생 시 중단 여부 (기본값: true)",
+        "1": "<cd>stepDelay</cd>: 단계 간 지연 시간 (ms)",
+        "2": "<cd>onStepStart</cd>: 단계 시작 시 콜백",
+        "3": "<cd>onStepEnd</cd>: 단계 종료 시 콜백",
+        "4": "<cd>onStepError</cd>: 오류 발생 시 콜백"
+      },
+      "subtitle6": "API 참조",
+      "8": "주요 시나리오 API 메서드:",
+      "apiList": {
+        "0": "<cd>scenario.step(name, params)</cd>: 특정 단계 실행",
+        "1": "<cd>scenario.run(paramsMap)</cd>: 모든 단계 순차 실행",
+        "2": "<cd>scenario.getSteps()</cd>: 단계 목록 반환",
+        "3": "<cd>scenario.hasStep(name)</cd>: 단계 존재 여부 확인",
+        "4": "<cd>scenario.clone(newName)</cd>: 시나리오 복제"
+      }
     }
   },
   "api": {
