--- a/src/shared/i18n/messages/ko/caro-kann.json
+++ b/src/shared/i18n/messages/ko/caro-kann.json
@@ -164,7 +164,7 @@
     },
     "validate": {
       "0": "validate 미들웨어는 상태 관리 시 데이터의 타입 안전성을 높이는 유용한 도구입니다. 이 미들웨어는 상태가 변경되기 전, 사전에 정의된 스키마를 기준으로 데이터의 유효성을 먼저 검사합니다. 이를 통해 유효하지 않은 데이터가 애플리케이션 상태에 반영되는 것을 방지하여 상태의 일관성과 안정성을 유지하는 데 도움을 줍니다. 만약 잘못된 상태 변경 시도가 발생하면, 해당 변경을 차단하고 즉시 콘솔에 자세한 오류 정보를 출력하여 디버깅을 용이하게 합니다.",
-      "1": "caro-kann의 validate 미들웨어는 내부적으로 <a><cd>@ilokesto/common-resolver</cd></a>를 활용하여, zod, yup, superstruct와 같이 널리 사용되는 다양한 유효성 검사 라이브러리와 쉽게 연동할 수 있습니다. 덕분에 개발자는 자신이 익숙하거나 프로젝트에 이미 적용된 검증 도구를 그대로 사용하여 상태 데이터의 무결성을 효과적으로 관리할 수 있다는 장점이 있습니다."
+      "1": "caro-kann의 validate 미들웨어는 내부적으로 <a><cd>@ilokesto/common-resolver</cd></a>를 활용하여, zod (v3, v4), yup, superstruct와 같이 널리 사용되는 다양한 유효성 검사 라이브러리와 쉽게 연동할 수 있습니다. 덕분에 개발자는 자신이 익숙하거나 프로젝트에 이미 적용된 검증 도구를 그대로 사용하여 상태 데이터의 무결성을 효과적으로 관리할 수 있다는 장점이 있습니다."
     },
     "reducer": {
       "0": "reducer 미들웨어는 상태 관리에서 중앙 집중식 상태 변환을 처리하는 방식으로, 상태의 변경을 예측 가능하고 일관성 있게 유지할 수 있게 합니다. 이 패턴은 주로 Redux에서 사용하는 방식으로, 상태를 불변성을 유지하며 업데이트하도록 설계되어 있습니다. reducer 미들웨어는 주로 액션(action)을 통해 상태를 변경하며, 상태 업데이트 로직을 중앙에서 관리하게 됩니다.",
